[package]
name = "tpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
eyre = "0.6.8"
ffmpeg-next = "5.1.1"
infer = "0.9.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
subprocess = "0.2.9"
walkdir = "2.3.2"
